--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#">Add Student</a>
+            <a class="nav-link" routerLink="/addstudent">Add Student</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="#">View Student</a>
@@ -29,3 +29,22 @@
       </div>
     </div>
   </nav>
+  <div class="container">
+    <div class="row">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://images.ctfassets.net/hrltx12pl8hq/665eF3niDQz0XEh5Ahsiak/29372e98c61c075b976e51af9d6085f4/compressed_shutterstock_1253693548.jpg?fit=fill&w=800&h=300" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://images.ctfassets.net/hrltx12pl8hq/665eF3niDQz0XEh5Ahsiak/29372e98c61c075b976e51af9d6085f4/compressed_shutterstock_1253693548.jpg?fit=fill&w=800&h=300" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://images.ctfassets.net/hrltx12pl8hq/665eF3niDQz0XEh5Ahsiak/29372e98c61c075b976e51af9d6085f4/compressed_shutterstock_1253693548.jpg?fit=fill&w=800&h=300" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>  
+  </div>   
