--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,34 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-secondary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/addstudent">Add Student</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="#">View Student</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="#">Add Faculty</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="#">View Faculty</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signin">Login</a>
-          </li>
-         
-        </ul>
-      </div>
-    </div>
-  </nav>
+<app-navbar></app-navbar>
   <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
