--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -88,7 +88,7 @@
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <button class="btn btn-success"(click)="readValues()">Submit</button>
                  </div>
-                 <a routerLink="/signin">Go to login</a>
+                 <a routerLink="/">Go to login</a>
             </div>
         </div>
     </div>
