--- a/src/app/addstudent/addstudent.component.html
+++ b/src/app/addstudent/addstudent.component.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="Address" class="form-control">Guardian Address</label>
-                    <textarea id="" cols="50" rows="10" name="address"></textarea>
+                    <textarea id="" class="form-control"cols="50" rows="10" name="address"></textarea>
                     
 
                 </div>
