--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,10 +13,16 @@
             <a class="nav-link" href="/addstudent">Add Student</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/views">View Student</a>
+            <a class="nav-link" href="/viewstudent">View Student</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="/addfaculty">Add Faculty</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/viewstudent">View Faculty</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">Login</a>
           </li>
         </ul>
       </div>
